--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "nodemon": "^2.0.13"
   }
 }
