--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "react-scripts": "4.0.3",
         "react-swipeable-views": "^0.14.0",
         "react-toastify": "^8.1.0",
+        "redux": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
