--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "react-toastify": "^8.1.0",
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.1",
+        "timeago.js": "^4.0.2",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
